--- a/src/components/Home/PostPreview.css
+++ b/src/components/Home/PostPreview.css
@@ -7,14 +7,16 @@
 }
 
 .PostPreview a.BackButton {
-    display:flexbox;
+    display: inline-block;
+    padding: 5px 10px; /* Adjust the padding as needed */
     margin-bottom: 20px;
     background-color: #a2a2a2; /* Cement color */
-    padding: 10px;
     color: #fff;
     text-decoration: none;
     border-radius: 5px;
+    font-size: 14px; /* Adjust the font size as needed */
   }
+  
 .PostPreview button.DeleteButton {
     background-color: #ff8c8c; /* Light red background */
     color: #fff;
