--- a/src/components/Home/TopBar.css
+++ b/src/components/Home/TopBar.css
@@ -1,11 +1,17 @@
 .top-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: #001529;
-    padding: 0 20px;
-  }
-  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #001529;
+ height: 70px;
+  width: 100%; /* Set width to 100% */
+}
+body {
+  margin: 0;
+ margin-top: -15px;
+ 
+}
+
   .logo-section {
     margin-top: 10px;
     display: flex;
@@ -23,15 +29,7 @@
     margin-right: 20px;
   }
   
-  .menu-links a.active {
-    font-weight: bold;
-  }
   
-  .menu-links a.active.dashboard {
-    background-color: #1890ff;
-    padding: 8px 12px;
-    border-radius: 4px;
-  }
   
   .user-profile {
     color: white;
