--- a/src/components/Home/Dashboard.css
+++ b/src/components/Home/Dashboard.css
@@ -1,5 +1,3 @@
-/* Dashboard.css */
-
 .dashboard-container {
   padding: 20px;
 }
@@ -7,15 +5,15 @@
 .content-container {
   display: flex;
   justify-content: space-between;
-  gap: 20px; /* Adjust the gap between left and right panels */
-  margin-right: 20px; /* Add margin to the right for separation */
+  gap: 20px; 
+  margin-right: 20px;
 }
 .left-panel {
-  width: 25%; /* Adjust the width as per your requirement */
+  width: 25%;
   padding: 10px;
   overflow-y: auto;
-  font-size: 12px; /* Adjust the font size for the container contents */
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add a box shadow for a container effect */
+  font-size: 12px; 
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
   display: flex;
   flex-direction: column;
 }
@@ -60,11 +58,11 @@
 }
 
 .selected-post {
-  background-color: #e6f7ff; /* Adjust the background color for selected post */
+  background-color: #e6f7ff; 
 }
 
 .right-panel {
-  width: 70%; /* Adjust the width as per your requirement */
+  width: 70%; 
   padding: 0 20px;
 }
 
@@ -77,8 +75,8 @@
 }
 
 .user-avatar {
-  width: 40px; /* Adjust size as needed */
-  height: 40px; /* Adjust size as needed */
+  width: 40px; 
+  height: 40px; 
   border-radius: 50%;
   margin-right: 10px;
 }
@@ -89,14 +87,12 @@
 }
 
 .post-details .post-title {
-  text-align: left; /* Adjust text alignment as needed */
-  font-size: 20px; /* Adjust font size as needed */
+  text-align: left; 
+  font-size: 20px; 
   margin-bottom: 10px;
 }
 
-/* Dashboard.css */
 
-/* Left Panel Styles */
 .left-panel .post-image {
   width: 70px;
   height: 70px;
@@ -104,11 +100,11 @@
   margin-right: 10px;
 }
 
-/* Right Panel Styles */
+
 .right-panel .post-image {
-  width: 100%; /* Make the image responsive within the container */
-  height: auto; /* Maintain the aspect ratio of the image */
-  max-height: 300px; /* Adjust the maximum height as per your requirements */
+  width: 100%;
+  height: auto; 
+  max-height: 300px; 
   border-radius: 10px;
   margin-bottom: 20px;
 }
@@ -148,8 +144,8 @@
 }
 
 .user-avatar {
-  width: 30px; /* Adjust size as needed */
-  height: 30px; /* Adjust size as needed */
+  width: 30px; 
+  height: 30px; 
   border-radius: 50%;
   margin-right: 10px;
 }
