--- a/src/components/Home/TopBar.css
+++ b/src/components/Home/TopBar.css
@@ -4,7 +4,7 @@
   align-items: center;
   background: #001529;
  height: 70px;
-  width: 100%; /* Set width to 100% */
+  width: 100%; 
 }
 body {
   margin: 0;
